# NMTK

./: .gitignore  CMakeLists.txt  README.md  build.sh  imgui.ini  init.sh
android/app/: build.gradle
android/app/src/main/java/org/libsdl/app/: SDLActivity.java
include/: App.h
include/Core/: InputManager.h
include/Menu/: MenuGroup.h  MenuItem.h  MenuManager.h
include/Page/: Home.h  Page.h  PageManager.h
src/: main.cpp
src/Core/: InputManager.cpp
src/Menu/: MenuManager.cpp
src/Page/: Home.cpp  PageManager.cpp
